mikhastam hover ro test konam

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         <div>
             <div>
                 <div>
-                      <P>salam</P> 
+                    <P>salam</P>
                 </div>
             </div>
         </div>
     </div>
+    <!--hover-->
+
+
+    <div class="hovery">Hover over me!</div>
 </body>
 
 </html>
