--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
         </div>
     </div>
     <!--hover-->
+    <!-- تست سیستم اصلی -->
 
 
-    <div class="hovery">Hover over me!</div>
-
-
+    
 </body>
 
 </html>
